2015-01-15  Martin Liska  <mliska@suse.cz>

	* g++.dg/ipa/pr64068.C: New test.
	* gcc.dg/ipa/PR64559.c: New test.

2015-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/other/anon5.C: Ignore additional messages on Linux/x86
	with PIE.

2015-01-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61743
	* gcc.dg/tree-ssa/pr61743-1.c: New testcase.
	* gcc.dg/tree-ssa/pr61743-2.c: Likewise.

2015-01-15 Renlin Li <renlin.li@arm.com>

	* gcc.target/aarch64/volatileloadpair-1.c: Correct dg-options.
	* gcc.target/aarch64/volatileloadpair-2.c: Likewise.

2015-01-15  Yuri Rumyantsev  <ysrumyan@gmail.com>

	* gcc.dg/vect/vect-aggressive-1.c: New.
	* gcc.target/i386/avx2-vect-aggressive.c: New.

2015-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/pr54445-2.c: Adjust scan string for PIE.

2015-01-15  Richard Biener  <rguenther@suse.de>

	PR lto/64415
	* gcc.dg/lto/pr64415_0.c: Re-enable for darwin with
	-Wl,-undefined,dynamic_lookup.

2015-01-15  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt47.adb: New test.

2015-01-15  Richard Biener  <rguenther@suse.de>

	PR lto/64415
	* gcc.dg/lto/pr64415_0.c: Skip on darwin.

2015-01-15  Yuri Rumyantsev  <ysrumyan@gmail.com>

	PR tree-optimization/64434
	* gcc.dg/torture/pr64434.c: New test.

2015-01-15  Matthew Fortune  <matthew.fortune@imgtec.com>

	* gcc.target/mips/mips.exp (mips-dg-options): -mips3d requires
	-mno-micromips.  MIPS32R1 and below require -mno-micromips.
	-march=loongson* and -march=octeon* require -mno-micromips.

2015-01-15  Andrew Bennett  <andrew.bennett@imgtec.com>
	    Matthew Fortune  <matthew.fortune@imgtec.com>

	* gcc.target/mips/call-saved-4.c (foo): Add NOCOMPRESSION.
	* gcc.target/mips/call-saved-5.c (foo): Likewise.
	* gcc.target/mips/call-saved-6.c (foo): Likewise.
	* gcc.target/mips/call-saved-7.c: New file.
	* gcc.target/mips/call-saved-8.c: New file.
	* gcc.target/mips/call-saved-9.c: New file.

2015-01-14  Matthew Fortune  <matthew.fortune@imgtec.com>
