@@ -1,3 +1,14 @@
+2015-01-15  Tejas Belagod  <tejas.belagod@arm.com>
+
+	PR target/63971
+	* gcc.target/aarch64/test_frame_1.c: Revert to 3 loads of x30
+	in epilogue.
+	* gcc.target/aarch64/test_frame_6.c: Likewise.
+	* gcc.target/aarch64/test_frame_2.c: Revert to 2 pair loads of
+	x30 and x19 (in the epilogue).
+	* gcc.target/aarch64/test_frame_4.c: Likewise.
+	* gcc.target/aarch64/test_frame_7.c: Likewise.
+
 2015-01-15  Martin Liska  <mliska@suse.cz>
 
 	* g++.dg/ipa/pr64068.C: New test.
